--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,6 +6,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
     padding: 0px 50px;
     box-sizing: border-box;
 }
@@ -29,13 +30,13 @@ h2 {
 
 footer {
     width: 100%;
-    height: 150px;
+    height: 125px;
     background-color: rgb(105, 105, 105);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     margin-top: 100px;
     box-sizing: border-box;
@@ -65,4 +66,5 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
 }
