--- a/src/components/homeComponents/Home.module.css
+++ b/src/components/homeComponents/Home.module.css
@@ -1,4 +1,5 @@
 .ad_banner {
+    margin-top: 60px;
     color: white;
     display: flex;
     flex-direction: column;
@@ -28,8 +29,82 @@
     border-radius: 2px;
 }
 
+.home_page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
 h1 {
     color: rgb(229, 108, 9);
     font-size: 36px;
     font-weight: bold;
+}
+
+.recipes_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.recipe_card {
+    width: 275px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    padding-bottom: 20px;
+    box-sizing: border-box;
+    margin: 15px;
+}
+
+.recipe_card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.img_container {
+    width: 275px;
+    height: 240px;
+}
+
+.recipe_card h3 {
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.search_bar {
+    background-color: rgb(255, 210, 171);
+    height: 40px;
+    width: 30%;
+    min-width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    padding-left: 5px;
+    margin: 10px;
+}
+
+.search_bar input {
+    background-color: rgb(255, 210, 171);
+    border: none;
+    width: 100%;
+    height: 80%;
+    border-radius: 20px;
+    font-size: 20px;
+}
+
+.search_icon {
+    height: 100%;
+    width: auto;
+    color:rgb(197, 89, 0)
 }
