--- a/src/components/detailComponents/Details.module.css
+++ b/src/components/detailComponents/Details.module.css
@@ -26,7 +26,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     gap: 50px;
-    bottom: 200px;
+    margin-bottom: 150px;
 }
 
 .details_container h2 {
